# MLMarker

./: .gitignore  .pypirc  MLMarker_Arnaud_quant.py  README.md  Tissue_predictors2_fulldata.ipynb  features.txt  pyproject.toml  requirements.txt  setup.py  test_notebook.ipynb
.github/workflows/: publish.yml
MLMarker/: __init__.py  explainability.py  mlmarker.py  utils.py
MLMarker_app/: __init__.py  atlas.py  cell_predictors.py  mlmarker.py  predictor_atlas.py  tissue_predictors.py  utils.py
MLMarker_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Projects/: protein(3).tsv
Projects/Andrea/: All_proteins_FULL.csv  All_proteins_PART.csv  Andrea.ipynb  EBCgroups
Projects/Cell_lines/: Cellline_predictions_normalized.csv  classify.ipynb  prediction.csv
Projects/Francis/: analysis.ipynb  final_proteins.csv  final_result.csv  final_result2.csv  metadata.txt  report.gg_matrix.tsv  report.pg_matrix.tsv  report.pr_matrix.tsv  report.unique_genes_matrix.tsv
Projects/Laura/: Messen_predictie.csv  Messen_predictie_subset_present.csv  classify.ipynb  idmapping_reviewed_true_2024_12_06.tsv  trf17254-sup-0003-tables1.xlsx
Projects/organoids_pauline/: MSqRob_diffexpr.R  Organoids_MLMarker_fullorganoids_proteins.ipynb  Organoids_MLMarker_smapleprep_SCP.ipynb  tmp_test.csv  (+7 more)
data/: training_instances.csv  used_features_tissue_predictor_RF_filtered_optnocart_0310.txt  used_features_tissue_predictor_RF_full_opt_nocart_0310..txt
mlmarker/: explainability.py  model.py  utils.py
mlmarker.egg-info/: PKG-INFO  SOURCES.txt
old_modules/: database.py  model.py
(+7 files in other folders)
