
[tool.poetry]
name = "mlmarker"
version = "0.1.0"
description = ""
authors = ["TineClaeys <tineclae.claeys@ugent.be>"]

[tool.poetry.dependencies]
python = "^3.6"
ace = "0.3.3"
dask = "2024.8.0"
datashader = "0.16.3"
easydev = "0.13.2"
joblib = "1.2.2"
matplotlib = "3.7.2"
numpy = "1.26.4"
pandas = "2.2.2"
plotly = "5.24.0"
scikit-learn = "1.3.1"
scipy = "1.12.0"
seaborn = "0.13.2"
shap = "0.46.0"
sklearn = "0.0"
umap-learn = "0.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
